--- a/app/src/main/res/layout/gps_location_widget.xml
+++ b/app/src/main/res/layout/gps_location_widget.xml
@@ -27,7 +27,7 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/ic_map_black_24dp"
-                android:tint="?android:attr/colorAccent"
+                app:tint="?android:attr/colorAccent"
                 android:layout_marginEnd="8dp" />
 
             <TextView
