--- a/app/src/main/res/layout/gps_location_widget.xml
+++ b/app/src/main/res/layout/gps_location_widget.xml
@@ -26,7 +26,7 @@
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/ic_map_black_24dp"
+                android:src="@drawable/ic_sensor_gps"
                 app:tint="?android:attr/colorAccent"
                 android:layout_marginEnd="8dp" />
 
